Bug 458202 - Search for messages in kmail does not work anymore... no results at all
Summary: Search for messages in kmail does not work anymore... no results at all
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: search (other bugs)
Version First Reported In: 5.21.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-23 09:48 UTC by piedro
Modified: 2022-08-31 12:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description piedro 2022-08-23 09:48:43 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. try to search for messages containing "regards" 
2. search or open search folder 
3. restart kmail

OBSERVED RESULT
No matter what I do - I cannot search in kmail anymore! 


EXPECTED RESULT
Mails showing up in a search fitting certain criteria

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: Arch fully updated (5.19.3)
(available in About System)
KDE Plasma Version: 5.25.4-1
KDE Frameworks Version: 5.97.0
Qt Version: 5.15.5
Kmail:  5.21.0 (22.08.0)


ADDITIONAL INFORMATION

This really has to work - otherwise the whole setup for an email client for multiple mail accounts, filters and so forth is utterly useless if there's no search function to find stuff... seems to be a regression because it kind of worked before. 

Though also every time I open any search effort there is the complaint that folders have to be reindexed... even if I reindexed two seconds ago...
Comment 1 Till Schäfer 2022-08-31 09:33:05 UTC
I can confirm the issue here. This is a recent regression. It worked in 5.20.3/20.04.3.
Comment 2 Till Schäfer 2022-08-31 09:36:53 UTC
To clarify things, the quick filter on top of the message list (Alt+Q) works, but the search dialog (Tools -> Find Messages...) does not. 

Operating System: Gentoo Linux 2.8
KDE Plasma Version: 5.25.4
KDE Frameworks Version: 5.97.0
Qt Version: 5.15.5
Kernel Version: 5.15.59-gentoo (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-4790K CPU @ 4.00GHz
Memory: 23.4 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 970/PCIe/SSE2
Manufacturer: Gigabyte Technology Co., Ltd.
Product Name: Z97X-UD5H
Comment 3 piedro 2022-08-31 10:18:13 UTC
Also for clarification: 

Checking with Akonadi Console there was no "Akondi indexing agent" activated - I am not sure it is needed but I added it now. 

Sadly this had no effect - still can't search in kmail - filtering works but doesn't help for any searches spanning more than one folder obviously. 

Please can someone look into this? 

thx a lot, p.
Comment 4 Laurent Montel 2022-08-31 11:39:02 UTC
Git commit 2acf92c81c4317950760e22c4fc1c5e216de6012 by Laurent Montel.
Committed on 31/08/2022 at 11:38.
Pushed by mlaurent into branch 'release/22.08'.

Fix Bug 458202: Search for messages in kmail does not work anymore... no results at all

FIXED-IN: 5.21.1
Related: bug 458245

M  +4    -3    src/server/search/searchmanager.cpp

https://invent.kde.org/pim/akonadi/commit/2acf92c81c4317950760e22c4fc1c5e216de6012
Comment 5 Till Schäfer 2022-08-31 12:10:52 UTC
I can confirm the patch is fixing the problem. Thx for the fast help.