Fix Bug 458202: Search for messages in kmail does not work anymore... no results at all

FIXED-IN: 5.21.1
BUG: 458202
BUG: 458245